@@ -364,7 +364,7 @@ void Account::loginError(const Error& err)
         
     const std::vector<Root>& args = err->getArgs();
     std::string msg = args[0]->getAttr("message").asString();
-    debug() << "got login error: " << msg;
+    warning() << "got login error: " << msg;
     LoginFailure.emit(msg);
     
     m_status = DISCONNECTED;
